corrected ebnf syntax errors

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4216,7 +4216,7 @@ Document                 = DOLLibrary
 DOLLibrary             = [ PrefixMap ] , 'library' , LibraryName , Qualification , { LibraryItem } ;
 NativeDocument = ($<$) language and serialization specific ($>$) ;
 LibraryItem             = LibraryImport | Definition | Qualification ;
-Definition              =  OMSDefinition | NetworkDefinition | MappingDefinition 
+Definition              =  OMSDefinition | NetworkDefinition | MappingDefinition ;
 LibraryImport                = 'import' , LibraryName ;
 Qualification            = LanguageQualification | LogicQualification | SyntaxQualification ;
 LanguageQualification             = 'language' , LanguageRef ;
@@ -4276,8 +4276,8 @@ Network               = NetworkElements, [ ExcludedElements ] ;
 NetworkElements       = NetworkElement , { ',' , NetworkElement } ;
 NetworkElement        = [ Id , ':' ] , ElementRef ;
 ExcludedElements      = 'excluding' , ExcludedElement , { ',' , ExcludedElement } ;
-ExcludedElement       = PathReference | ElementRef
-PathReference         = IRI, '->', IRI
+ExcludedElement       = PathReference | ElementRef ;
+PathReference         = IRI, '->', IRI ;
 ElementRef            = IRI ;
 Id                     = Letter , { LetterOrDigit } ;
 \end{lstlisting}
@@ -4388,7 +4388,7 @@ ClosableOMS      = BasicOMS
                      | OMSRef , [ ImportName ] ; 
                      
 ExtendingOMS        = ClosableOMS
-                     | RelativeClosureOMS 
+                     | RelativeClosureOMS ;
                      
 RelativeClosureOMS  = ClosureType , '{' , ClosableOMS , '}' ;
                      
