added rule for RemovalKind

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9515,6 +9515,7 @@ Filtering            = 'filter' , RemovalKind , BasicOMS ;
 Extension         = 'extension' , [ ConservativityStrength ] , [ ExtensionName ] , 
                                        ExtendingOMS ;
 
+RemovalKind = keep | remove ;
 ConservativityStrength         = 'consequence-conservative' | 'model-conservative' | 'not-consequence-conservative' | 'not-model-conservative' | 'implied' | 'monomorphic' | 'weak-definitional' | 'definitional' ;
 
 
