--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -9528,6 +9528,7 @@ Approximation      ::= approx RemovalKind [InterfaceSignature] [LogicRef]
 Filtering          ::= filter RemovalKind BasicOMS
 Extension          ::= extension [ConservativityStrength]
                                  [ExtensionName] ExtendingOMS
+RemovalKind        ::= keep | remove
 ConservativityStrength ::= consequence-conservative
                      | model-conservative
                      | not-consequence-conservative
